translation EN-ID added

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
 
   /* Light mode colors */
   --bg-primary: #f9f9ed;
-  --bg-secondary: #ebebe1;
+  --bg-secondary: #e4e4da;
   --text-primary: #3f3f3f;
   --text-secondary: #3f3f3f;
   --text-muted: #3f3f3f/70;
